<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/chuni_query_menu_profile" />
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_menu_rating"
            android:title="@string/chuni_query_rating" />
        <item
            android:id="@+id/nav_recent_play"
            android:icon="@drawable/ic_menu_recent_play"
            android:title="@string/chuni_query_menu_recent_play" />
        <item
            android:id="@+id/nav_items"
            android:icon="@drawable/ic_menu_items"
            android:title="@string/chuni_query_menu_items" />
    </group>
</menu>
