<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="12dp"
    android:orientation="vertical"
    app:cardBackgroundColor="#424242">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/topIcon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:src="@drawable/chuni_menu_rating"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/topText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:includeFontPadding="false"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap"
            tools:text="NO.5" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:includeFontPadding="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="hand in hand" />

        <TextView
            android:id="@+id/className"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginTop="4dp"
            android:background="@drawable/chuni_game_record_tag_bg"
            android:includeFontPadding="false"
            android:paddingStart="4dp"
            android:paddingTop="2dp"
            android:paddingEnd="4dp"
            android:paddingBottom="2dp"
            android:shadowColor="@android:color/background_dark"
            android:shadowDy="1"
            android:shadowRadius="3"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="MASTER" />

        <TextView
            android:id="@+id/rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_alignBaseline="@id/className"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@id/className"
            android:background="@drawable/chuni_game_record_tag_bg"
            android:includeFontPadding="false"
            android:paddingStart="4dp"
            android:paddingTop="2dp"
            android:paddingEnd="4dp"
            android:paddingBottom="2dp"
            android:shadowColor="@android:color/background_dark"
            android:shadowDy="1"
            android:shadowRadius="3"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="SSS" />

        <TextView
            android:id="@+id/scoreTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/className"
            android:layout_marginTop="16dp"
            android:alpha="0.8"
            android:includeFontPadding="false"
            android:text="@string/chuni_query_record_card_score"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/scoreTitle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/scoreTitle"
            android:alpha="0.8"
            android:includeFontPadding="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="997218" />

        <TextView
            android:id="@+id/difficultyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scoreTitle"
            android:layout_marginTop="4dp"
            android:alpha="0.8"
            android:includeFontPadding="false"
            android:text="@string/chuni_query_record_card_diff"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/difficultyTitle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/difficultyTitle"
            android:alpha="0.8"
            android:includeFontPadding="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="12.7" />

        <TextView
            android:id="@+id/ratingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/difficulty"
            android:layout_marginTop="4dp"
            android:alpha="0.8"
            android:includeFontPadding="false"
            android:text="@string/chuni_query_rating"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <org.bbs.chuniquery.chunithm.ui.widgets.ChuniQueryRatingView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/ratingTitle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/ratingTitle"
            android:includeFontPadding="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="12.7" />

        <TextView
            android:id="@+id/dateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ratingTitle"
            android:layout_marginTop="4dp"
            android:alpha="0.8"
            android:includeFontPadding="false"
            android:text="@string/chuni_query_record_card_play_date"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/dateTitle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="160dp"
            android:layout_toEndOf="@id/dateTitle"
            android:alpha="0.8"
            android:includeFontPadding="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            tools:text="2020.02.02 11:45:14" />

        <LinearLayout
            android:id="@+id/detailContainer"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/scoreTitle"
            android:layout_alignParentEnd="true"
            android:orientation="vertical" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>